<resources>
    <string name="app_name">DocumentManager</string>

    <string name="Bienvenido">Bienvenido</string>
    <string name="Menu_panel">Panel</string>
    <string name="Menu_cuenta">Cuenta</string>

    <string name="Titulo_RL_Admin">Titulo</string>

    <string name="Txt_rol">elegir rol</string>
    <string name="Btn_rol_administrador">Administrador</string>
    <string name="Btn_rol_empleado">Empleado</string>

    <string name="TxtRegistroAdmin">Registro Administrador</string>
    <string name="Et_apellidos_admin">Apellidos</string>
    <string name="Et_nombres_admin">Nombres</string>
    <string name="Et_correo_admin">Correo</string>
    <string name="Et_contraseña_admin">Contraseña</string>
    <string name="Et_R_contraseña_admin">Confirmar Contraseña</string>
    <string name="Btn_registrar_admin">Registrar</string>

    <string name="Cerrar_Sesion_Admin">Cerrar Sesión</string>

    <string name="TxtLoginAdmin">Login Administrador</string>

    <string name="Btn_login_Admin">Ingresar</string>
    <string name="Txt_tengo_cuenta">Tengo una cuenta</string>

    <string name="Btn_agregar_categoria">Agregar categoría</string>
    <string name="Txt_agregar_categoria">Agregar categoría</string>
    <string name="Et_descripcion_cate">Ingrese categoría</string>
    <string name="Agregar_cateooria_BD">Agregar</string>

    <string name="Item_nombre_categoria_a">Nombre categoria</string>
    <string name="Buscar_categoria">Buscar categoria</string>

    <string name="Txt_agregar_doc">Agregar documento</string>
    <string name="Et_titulo_documento">Título documento</string>
    <string name="Et_descripcion_doc">Descripçión documento</string>
    <string name="Tv_categoria_doc">Categoría</string>
    <string name="Btn_subir_doc">Subir</string>

    <string name="Txt_titulo_documento">Documentos</string>
    <string name="Txt_titulo_categoria">Categoría</string>
    <string name="Et_buscar_documento_a">Buscar documento</string>

    <string name="Txt_titulo_documento_admin">Título Documento</string>
    <string name="Txt_descripcion_documento_admin">Descripción Documento</string>
    <string name="Txt_categoria_documento_admin">Categoría</string>
    <string name="Txt_tamaño_documento_admin">5MB</string>
    <string name="Txt_fecha_documento_admin">dd/MM/yy</string>

    <string name="Btn_actualizar_a">Actualizar</string>
    <string name="Txt_actualizar_doc">Actualizar Documento</string>
    <string name="Btn_actualizar_doc">Actualizar</string>

    <string name="Txt_detalle_doc">Detalle Documento</string>
    <string name="titulo_doc_d">Título Documento</string>

    <string name="Txt_categoria_d">Categoria:</string>
    <string name="categoria_d"> -- </string>
    <string name="Txt_fecha_d"> Fecha: </string>
    <string name="fecha_d"> -- </string>
    <string name="Txt_tamaño_d">Tamaño:</string>
    <string name="tamaño_d"> -- </string>
    <string name="Txt_vistas_d">Vistas:</string>
    <string name="vistas_d">--</string>
    <string name="Txt_descargas_d">Descargas:</string>
    <string name="descargas_d">--</string>
    <string name="Txt_paginas_d">Páginas:</string>
    <string name="paginas_d">--</string>

    <string name="Txt_descripcion_d">Descripción:</string>
    <string name="descripcion_d">--:</string>

    <string name="Btn_leer_doc">Leer</string>
    <string name="Txt_leer_doc">Lectura del documento</string>

    <!--Cuenta Administrador -->
    <string name="apellido_admin">Apellidos:</string>
    <string name="Txt_apellido_admin"> -- </string>
    <string name="nombre_admin">Nombres:</string>
    <string name="Txt_nombre_admin"> -- </string>
    <string name="correo_admin">Correo:</string>
    <string name="Txt_correo_admin"> -- </string>
    <string name="t_registro_admin">Registrado desde:</string>
    <string name="Txt_t_registro_admin"> -- </string>
    <string name="rol_admin">Rol:</string>
    <string name="Txt_rol_admin"> -- </string>
    <string name="Txt_mas_opciones">Más opciones:</string>

    <string name="EditarPerfilAdmin">Editar Perfíl</string>
    <string name="Txt_editar_pefil_a">Editar Perfil</string>
    <string name="Et_a_apellidos">Apellidos</string>
    <string name="Btn_actualizar_info">Actualizar</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>