<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Administrador.DetalleDocumento">


    <!--Toolbar -->
    <RelativeLayout
        android:id="@+id/ToolbarRLDetalle"
        android:layout_width="match_parent"
        android:background="@color/blue"
        android:layout_height="@dimen/m_toolbar_height">

        <ImageButton
            android:id="@+id/Ib_regresar"
            android:src="@drawable/ic_regresar"
            android:background="@color/blueNight"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/m_toolbar_height" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/hedvig_serif"
            android:text="@string/Txt_detalle_doc"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

        <View
            android:background="#cccccc"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>


    </RelativeLayout>

    <!--Información de documento-->
    <ScrollView
      android:layout_below="@+id/ToolbarRLDetalle"
      android:layout_above="@id/Btn_leer_doc"
      android:padding="5dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">

      <androidx.appcompat.widget.LinearLayoutCompat
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
        
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Visualizador de Documento-->
            <RelativeLayout
              android:id="@+id/docRL"
              android:layout_marginEnd="5dp"
              android:background="#cccccc"
              android:layout_width="100dp"
              android:layout_height="170dp">

            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/VisualizadorDoc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

          </RelativeLayout>

            <!-- Título-->
            <TextView
                android:id="@+id/titulo_doc_d"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:text="@string/titulo_doc_d"
                android:layout_toEndOf="@+id/docRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <!-- Información de Documento-->
            <TableLayout
                android:layout_toEndOf="@+id/docRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/titulo_doc_d">

                <!--Categoria -->
                <TableRow
                    android:layout_marginTop="5dp">

                    <TextView
                        android:text="@string/Txt_categoria_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/categoria_d"
                        android:text="@string/categoria_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                </TableRow>

                <!--Fecha -->
                <TableRow
                    android:layout_marginTop="5dp">

                    <TextView
                        android:text="@string/Txt_fecha_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/fecha_d"
                        android:text="@string/fecha_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                </TableRow>

                <!--Tamaño -->
                <TableRow
                    android:layout_marginTop="5dp">

                    <TextView
                        android:text="@string/Txt_tamaño_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/tamaño_d"
                        android:text="@string/tamaño_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                </TableRow>

                <!--Vistas -->
                <TableRow
                    android:layout_marginEnd="5dp">

                    <TextView
                        android:text="@string/Txt_vistas_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/vistas_d"
                        android:text="@string/vistas_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                </TableRow>

                <!--Descargas -->
                <TableRow
                    android:layout_marginEnd="5dp">

                    <TextView
                        android:text="@string/Txt_descargas_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/descargas_d"
                        android:text="@string/descargas_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                </TableRow>

                <!--Paginas -->
                <TableRow
                    android:layout_marginTop="5dp">

                    <TextView
                        android:text="@string/Txt_paginas_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                    <TextView
                        android:id="@+id/paginas_d"
                        android:text="@string/paginas_d"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"/>

                </TableRow>

            </TableLayout>

        </RelativeLayout>

          <TextView
              android:text="@string/Txt_descripcion_d"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"/>

          <TextView
              android:id="@+id/descripcion_d"
              android:text="@string/descripcion_d"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="5dp"/>

      </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Btn_leer_doc"
        android:text="@string/Btn_leer_doc"
        android:backgroundTint="@color/turquoiseNight"
        android:drawableTop="@drawable/ic_leer_doc"
        android:textAllCaps="true"
        android:textSize="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>