<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment_Admin.Fragment_admin_cuenta">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_perfil_admin"
        android:src="@drawable/ic_perfil_cuenta"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:scaleType="centerCrop"
        android:layout_width="120dp"
        android:layout_height="120dp"/>

        <!-- Apellidos -->
        <TextView
            android:id="@+id/apellido_admin"
            android:text="@string/apellido_admin"
            android:layout_below="@id/img_perfil_admin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_apellido_admin"
            android:text="@string/Txt_apellido_admin"
            android:layout_below="@id/img_perfil_admin"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Nombres-->
        <TextView
            android:id="@+id/nombre_admin"
            android:text="@string/nombre_admin"
            android:layout_marginTop="20dp"
            android:layout_below="@id/apellido_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_nombre_admin"
            android:text="@string/Txt_nombre_admin"
            android:layout_below="@id/apellido_admin"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Correo-->
        <TextView
            android:id="@+id/correo_admin"
            android:text="@string/correo_admin"
            android:layout_marginTop="20dp"
            android:layout_below="@id/nombre_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_correo_admin"
            android:text="@string/Txt_correo_admin"
            android:layout_below="@id/nombre_admin"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Tiempo de Registro-->
        <TextView
            android:id="@+id/t_registo_admin"
            android:text="@string/t_registro_admin"
            android:layout_below="@id/correo_admin"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_t_registro_admin"
            android:text="@string/Txt_t_registro_admin"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/correo_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!--Rol-->
        <TextView
            android:id="@+id/rol_admin"
            android:text="@string/rol_admin"
            android:layout_marginTop="20dp"
            android:layout_below="@id/t_registo_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/Txt_rol_admin"
            android:text="@string/Txt_rol_admin"
            android:layout_marginTop="20dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/t_registo_admin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_below="@+id/rol_admin"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/Txt_mas_opciones"
                android:layout_marginBottom="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:padding="10dp">

                <TextView
                    android:id="@+id/EditarPerfilAdmin"
                    android:text="@string/EditarPerfilAdmin"
                    android:layout_gravity="center"
                    app:drawableStartCompat="@drawable/ic_editar"
                    app:drawableEndCompat="@drawable/ic_siguiente"
                    android:drawablePadding="10dp"
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.card.MaterialCardView>

            <!--Cerrar Sesión -->
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                android:padding="10dp">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

       <TextView
           android:id="@+id/Cerrar_Sesion_Admin"
           android:text="@string/Cerrar_Sesion_Admin"
           android:drawablePadding="10dp"
           android:padding="15dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           app:drawableStartCompat="@drawable/ic_cerrar_sesion"
           app:drawableEndCompat="@drawable/ic_siguiente" />

           </androidx.appcompat.widget.LinearLayoutCompat>

   </com.google.android.material.card.MaterialCardView>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </RelativeLayout>R
</ScrollView>

