<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="0dp"
    app:contentPadding="5dp">

    <RelativeLayout
        android:id="@+id/item_documento_admin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/RL_Doc"
            android:layout_width="100dp"
            android:layout_height="140dp"
            android:layout_marginEnd="10dp"
            android:background="#ccc">

            <!-- Imagen Documento -->
            <com.github.barteksc.pdfviewer.PDFView
                android:id="@+id/VisualizarDoc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </RelativeLayout>

        <!-- Título Documento-->
        <TextView
            android:id="@+id/Txt_titulo_documento_admin"
            android:text="@string/Txt_titulo_documento_admin"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:maxLines="1"
            android:layout_toStartOf="@+id/Ib_mas_opciones"
            android:layout_toEndOf="@+id/RL_Doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Descripción Documento-->
        <TextView
            android:id="@+id/Txt_descripcion_documento_admin"
            android:text="@string/Txt_descripcion_documento_admin"
            android:layout_toEndOf="@id/RL_Doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Txt_titulo_documento_admin"
            android:layout_marginTop="5dp"
            android:maxLines="4"
            android:layout_marginStart="5dp"
            />

        <!-- Categoría del Documento  -->
        <TextView
            android:id="@+id/Txt_categoria_documento_admin"
            android:text="@string/Txt_categoria_documento_admin"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Tamaño-->
        <TextView
            android:id="@+id/Txt_tamaño_documento_admin"
            android:text="@string/Txt_tamaño_documento_admin"
            android:layout_toEndOf="@id/RL_Doc"
            android:layout_alignParentBottom="true"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Fecha de subida-->
        <TextView
            android:id="@+id/Txt_fecha_documento_admin"
            android:text="@string/Txt_fecha_documento_admin"
            android:layout_alignParentBottom="true"
            android:layout_toStartOf="@id/Txt_categoria_documento_admin"
            android:layout_toEndOf="@id/Txt_tamaño_documento_admin"
            android:textAlignment="center"
            android:maxLines="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Opciones-->
        <ImageButton
            android:id="@+id/Ib_mas_opciones"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:src="@drawable/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>